--- a/src/app/views/producto-add.html
+++ b/src/app/views/producto-add.html
@@ -19,6 +19,9 @@
     </label>
     <input type="text" #precio="ngModel" name="precio" [(ngModel)]="producto.precio" class="form-control" required pattern="[0-9]+"/>
     <label>Imagen</label>
+    <div *ngIf="is_edit">
+            <img src="http://localhost/curso-angular4-backend/uploads/{{producto.imagen}}" class="producto_imagen" width="60"/>
+    </div>
     <input type="file" class="form-control" (change)="fileChangeEvent($event)"/>
     <br/>
     <input type="submit" value="{{titulo}}" [disabled]="!formProducto.form.valid" class="btn btn-success"/>
