--- a/src/app/views/productos-list.html
+++ b/src/app/views/productos-list.html
@@ -17,11 +17,15 @@
                 <div class="caption">
                     <h3>{{producto.nombre}}</h3>
                     <p>{{producto.precio}}</p>
-                    <p>
+                    <div class="botones" *ngIf="confirmado != producto.id">
                         <a [routerLink]="['/producto', producto.id]" class="btn btn-sm btn-primary">Ver</a>
-                        <a href="#" class="btn btn-sm btn-warning">Editar</a>
-                        <a href="#" class="btn btn-sm btn-danger">Borrar</a>
-                    </p>
+                        <a [routerLink]="['/editar-producto', producto.id]" class="btn btn-sm btn-warning">Editar</a>
+                        <a (click)="borrarConfirm(producto.id)" class="btn btn-sm btn-danger">Borrar</a>
+                    </div>
+                    <div class="seguro" *ngIf="confirmado == producto.id">
+                            <a (click)="onDeleteProducto(producto.id)" class="btn btn-sm btn-danger">Quiero eliminarlo</a>
+                            <a (click)="cancelarConfirm()" class="btn btn-sm btn-warning">Cancelar</a>
+                        </div>
                 </div>
             </div>
         </div>
